fix: text color and background not showing properly when agent prefers-color-scheme is light

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -54,6 +54,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
+  color: inherit;
   background-color: var(--black-2);
   cursor: pointer;
   transition: border-color 0.25s;
@@ -66,15 +67,19 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input {
+  color: inherit;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: var(--black-1);
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: var(--black-2);
   }
 }
